# ffmpeg_stu

./: .gitignore  CMakeLists.txt  README.md
01_class/: CMakeLists.txt  main.c
02_class/: CMakeLists.txt  main.c
avformat_model/: CMakeLists.txt  avformat_model.cc  avformat_model.h
cmake/: ffmpeg.cmake
examples/: avio_list_dir.c  avio_read_callback.c  decode_audio.c  decode_filter_audio.c  decode_filter_video.c  decode_video.c  demux_decode.c  encode_audio.c  encode_video.c  extract_mvs.c  filter_audio.c  hw_decode.c  mux.c  qsv_decode.c  qsv_transcode.c  remux.c  resample_audio.c  scale_video.c  show_metadata.c  transcode.c  transcode_aac.c  vaapi_encode.c  vaapi_transcode.c
examples_model/: CMakeLists.txt  examples_model.cc  examples_model.h
test/: CMakeLists.txt  avformat_model_test.cc  examples_model_test.cc
